--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <form
         class="registro-form"
         id="registroForm"
-        action="https://formspree.io/f/xayzqkpn"
+        action="https://formspree.io/f/mzzvkveq"
         method="POST"
       >
         <input type="text" name="nombre" placeholder="Tu nombre (opcional)">
@@ -363,7 +363,7 @@
   <section id="contacto" class="contacto fade-in">
     <div class="container">
       <h2>Contacto y soporte</h2>
-      <form class="contact-form" autocomplete="off" id="contactForm" action="https://formspree.io/f/xayzqkpn" method="POST">
+      <form class="contact-form" autocomplete="off" id="contactForm" action="https://formspree.io/f/mzzvkveq" method="POST">
         <input type="text" name="nombre" placeholder="Tu nombre" required id="nombreContacto">
         <input type="email" name="email" placeholder="Tu correo electrónico" required id="emailContacto">
         <textarea name="mensaje" placeholder="¿Tienes dudas, sugerencias o quieres colaborar con el proyecto? Escríbenos." required id="mensajeContacto"></textarea>
