--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
         <button type="submit" class="btn-primary" id="btnContacto">Enviar mensaje</button>
       </form>
       <div id="mensajeContacto" class="mensaje-contacto" style="display: none;"></div>
-      <p class="contacto-mail">O escríbenos a <a href="mailto:soporte@alia-ia.com">soporte@alia-ia.com</a></p>
+      <p class="contacto-mail">O escríbenos directamente a tu email configurado en Formspree</p>
+      <p class="contacto-nota">*Los correos llegan al email que configuraste en tu cuenta de Formspree</p>
     </div>
   </section>
 
